<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/romania_map_image"
            style="@style/HomeImage"
            android:src="@drawable/romania_regions_map" />

        <TextView
            style="@style/HomeText"
            android:text="@string/intro_romania_1" />

        <TextView
            style="@style/HomeText"
            android:text="@string/intro_romania_2" />

        <TextView
            style="@style/HomeText"
            android:text="@string/intro_romania_3" />

    </LinearLayout>
</ScrollView>